--- a/src/main/res/values-zh/strings_activity_accounts.xml
+++ b/src/main/res/values-zh/strings_activity_accounts.xml
@@ -2,47 +2,47 @@
   <string name="activity_account_title">人物</string>
   <string name="activity_account_description"/>
   <string name="activity_account_text_ship">％1$s（％2$s）</string>
-  <string name="activity_account_text_2">％1$d ESI范围</string>
-  <string name="activity_account_text_3">上次记录％1$s（％2$d登录）</string>
+  <string name="activity_account_text_2">％1$d ESI(SSO授权)范围</string>
+  <string name="activity_account_text_3">上次登录％1$s（％2$d次登录）</string>
   <string name="activity_account_text_reload">此帐户需要重新导入。</string>
   <string name="activity_account_text_reload_text">使用“添加”按钮替换它。</string>
   <string name="activity_account_error_token">验证失败</string>
   <string name="activity_account_context_delete">删除</string>
-  <string name="activity_account_dialog_delete_title">删除字符</string>
-  <string name="activity_account_dialog_delete_text">将删除所选字符中的所有信息。你确定吗？</string>
+  <string name="activity_account_dialog_delete_title">删除角色</string>
+  <string name="activity_account_dialog_delete_text">将从这里删除所选角色的全部信息。你确定吗？</string>
   <string name="activity_account_training_text_2_empty">训练队列是空的</string>
-  <string name="activity_account_training_text_2">队列中的％1$d技能</string>
-  <string name="activity_account_training_text_3">队列结束％1$s（％2$s）</string>
+  <string name="activity_account_training_text_2">队列中有％1$d个技能</string>
+  <string name="activity_account_training_text_3">队列结束于％1$s（％2$s）</string>
   <string name="activity_account_training_text_4">％1$s ％2$d（％3$s）</string>
-  <string name="activity_account_text_loading_title">加载角色信息。</string>
-  <string name="activity_account_text_loading_0">在你等待的时候捐款！</string>
+  <string name="activity_account_text_loading_title">加载角色信息中...</string>
+  <string name="activity_account_text_loading_0">在你等待的时候给Evanova提供捐款！</string>
   <string name="activity_account_text_loading_0_text">发送ISK给Evanova Android以显示您的支持。</string>
   <string name="activity_account_text_loading_1">获得免费的个性化游戏内邮件！</string>
-  <string name="activity_account_text_loading_1_text">发送ISK到Evanova Android并免费获得一封谢谢你的电子邮件。</string>
-  <string name="activity_account_text_loading_2">启动帐户删除。</string>
-  <string name="activity_account_text_loading_2_text">（开个玩笑，还在装…）</string>
-  <string name="activity_account_text_loading_3">Spai分析正在进行中。</string>
-  <string name="activity_account_text_loading_3_text">请等待，我们确认您是spai。</string>
-  <string name="activity_account_text_loading_4">翘曲到无限和超越。</string>
-  <string name="activity_account_text_loading_4_text">有人说跳吗？</string>
-  <string name="activity_account_text_loading_5">我可以在Evanova中导入我的德雷克吗？</string>
-  <string name="activity_account_text_loading_5_text">是的你可以！</string>
-  <string name="activity_account_scopes_tab_character">字符</string>
+  <string name="activity_account_text_loading_1_text">发送ISK到Evanova Android并免费获得一封感谢信。</string>
+  <string name="activity_account_text_loading_2">帐户删除中...</string>
+  <string name="activity_account_text_loading_2_text">（怎么可能，还在加载呢）</string>
+  <string name="activity_account_text_loading_3">进行Spai分析中。</string>
+  <string name="activity_account_text_loading_3_text">请在我们确认您Spai身份时稍等。</string>
+  <string name="activity_account_text_loading_4">跃迁目标：星辰大海。</string>
+  <string name="activity_account_text_loading_4_text">谁说的“起跳”？</string>
+  <string name="activity_account_text_loading_5">我能把我的幼龙配置导入Evanova吗？</string>
+  <string name="activity_account_text_loading_5_text">当然可以！</string>
+  <string name="activity_account_scopes_tab_character">角色</string>
   <string name="activity_account_scopes_tab_corporation">公司</string>
-  <string name="activity_account_scopes_dialog">选择ESI范围</string>
+  <string name="activity_account_scopes_dialog">选择ESI（SSO授权）范围</string>
   <string name="activity_account_tab_characters">人物</string>
-  <string name="activity_account_tab_corporations">企业</string>
-  <string name="activity_account_scopes_essentials_title">基本特征（必填）</string>
-  <string name="activity_account_scopes_essentials_c_title">基础公司（必填）</string>
-  <string name="activity_account_scopes_members_title">公司成员</string>
-  <string name="activity_account_scopes_messages_title">邮件，杀死邮件和通知</string>
-  <string name="activity_account_scopes_industry_title">工矿业</string>
+  <string name="activity_account_tab_corporations">公司</string>
+  <string name="activity_account_scopes_essentials_title">基本角色数据（必须）</string>
+  <string name="activity_account_scopes_essentials_c_title">基础公司数据（必须）</string>
+  <string name="activity_account_scopes_members_title">公司成员信息</string>
+  <string name="activity_account_scopes_messages_title">邮件，击杀报告和通知</string>
+  <string name="activity_account_scopes_industry_title">工业/挖矿</string>
   <string name="activity_account_scopes_assets_title">资产</string>
-  <string name="activity_account_scopes_planetary_title">行星互动</string>
-  <string name="activity_account_scopes_calendar_title">日历活动</string>
-  <string name="activity_account_scopes_contacts_title">联系人，排名和代理商</string>
+  <string name="activity_account_scopes_planetary_title">行星开发</string>
+  <string name="activity_account_scopes_calendar_title">日历</string>
+  <string name="activity_account_scopes_contacts_title">联系人，声望和任务代理</string>
   <string name="activity_account_scopes_contracts_title">合同</string>
   <string name="activity_account_scopes_market_title">市场订单</string>
-  <string name="activity_account_scopes_wallet_title">钱包余额和交易</string>
-  <string name="activity_account_scopes_fitting_title">配件</string>
+  <string name="activity_account_scopes_wallet_title">钱包余额和转账记录</string>
+  <string name="activity_account_scopes_fitting_title">装配</string>
 </resources>
